[package]
name = "mediainfo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ffmpeg-next = "6.1.1"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"

[[bin]]
name = "demo"
path = "bin/demo.rs"

[[bin]]
name = "audio"
path = "bin/audio.rs"

